# qtcreator-plugin-ubuntu

./: .bzrignore  README  Ubuntu.json.in  UbuntuPlugin.pro  manifest.json  manifestlib.js  myapp.json.template  qtcreator-plugin-ubuntu.pro  qtcreator-plugin-ubuntu.pro.user.15  qtcreator-plugin-ubuntu.pro.user.3.0-pre1  qtcreator-plugin-ubuntu.pro.user.488ce2d  ubuntu-click-tools.prf  ubuntu-click.prf  ubuntu.pri  ubuntu.pro  ubuntu_dependencies.pri  ubuntu_global.h  ubuntubzr.h  ubuntuclickmanifest.h  ubuntucoreappsmode.h  ubuntudeviceswidget.cpp  ubuntuircmode.cpp  ubuntumenu.cpp  ubuntupackagingwidget.cpp  ubuntupastebinmode.cpp  ubuntuprocess.h  ubuntuproject.h  ubuntuprojectapp.cpp  ubuntuprojectfile.h  ubuntuprojectnode.cpp  ubuntushared.h  ubuntuversionmanager.h  ubuntuwebmode.cpp
chroot-agent/: chroot-agent.pro  chrootagent.cpp  chrootagent.h  main.cpp
debian/: changelog  control  copyright  qtcreator-plugin-ubuntu-autopilot.install  qtcreator-plugin-ubuntu-common.install  qtcreator-plugin-ubuntu-cordova-common.install  qtcreator-plugin-ubuntu-cordova.install  qtcreator-plugin-ubuntu.install  rules  ubuntu-sdk-qmake-extras.install  ubuntusdk.desktop
debian/patches/: series  u-d-f_syntax.diff
debian/tests/: control  qtcreator-launch
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/: CMakeLists.txt  wizard.xml
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/app/: CMakeLists.txt  Main.qml  displayName.qml
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/app/tests/autopilot/: run
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/app/tests/autopilot/displayName/: __init__.py
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/app/tests/autopilot/displayName/main/: __init__.py  test_main.py
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/app/tests/autopilot/displayName/tests/: __init__.py  test_main.py
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/app/tests/unit/: tst_main.qml
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/app/ui/: WorldTab.qml  WorldTabTools.qml
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/backend/: CMakeLists.txt
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/backend/modules/displayName/: backend.h
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/backend/tests/unit/: tst_mytype.qml
share/qtcreator/templates/wizards/ubuntu/backend-app-cmake/cmake/: Click.cmake
share/qtcreator/templates/wizards/ubuntu/backendplustabs/: CMakeLists.txt  displayName.pro  manifest.json.in  wizard.xml
share/qtcreator/templates/wizards/ubuntu/backendplustabs/app/: CMakeLists.txt  Makefile  displayName.desktop.in  displayName.qml
share/qtcreator/templates/wizards/ubuntu/backendplustabs/app/components/: CMakeLists.txt
share/qtcreator/templates/wizards/ubuntu/backendplustabs/app/tests/autopilot/displayName/main/: test_main.py
share/qtcreator/templates/wizards/ubuntu/backendplustabs/app/ui/: CMakeLists.txt  HelloTab.qml  WorldTab.qml  WorldTabTools.qml
share/qtcreator/templates/wizards/ubuntu/backendplustabs/backend/: CMakeLists.txt  backend.pro
share/qtcreator/templates/wizards/ubuntu/backendplustabs/backend/modules/displayName/: backend.cpp  backend.h  displayName.pro  qmldir
share/qtcreator/templates/wizards/ubuntu/backendplustabs/backend/modules/displayName_lower/: backend.cpp
share/qtcreator/templates/wizards/ubuntu/backendplustabs/backend/tests/unit/: tst_mytype.qml
share/qtcreator/templates/wizards/ubuntu/backendplustabs/cmake/: Click.cmake
share/qtcreator/templates/wizards/ubuntu/backendplustabs/po/: CMakeLists.txt
share/qtcreator/templates/wizards/ubuntu/scope/: CMakeLists.txt  config.h  displayName-parser.c  displayName-parser.h  displayName.apparmor  displayName.c  displayName.pro  manifest.json  manifest.json.in  readme.txt  wizard.xml
share/qtcreator/templates/wizards/ubuntu/scope/cmake/: FindIntltool.cmake  UseXGettext.cmake
share/qtcreator/templates/wizards/ubuntu/scope/data/: CMakeLists.txt  displayName-scope.ini.in  displayName.ini  displayName.ini.in  displayName_lower.scope  unity-scope-displayName_lower.service.in
share/qtcreator/templates/wizards/ubuntu/scope/include/api/: client.h  config.h
share/qtcreator/templates/wizards/ubuntu/scope/include/scope/: localization.h  preview.h  query.h  scope.h
share/qtcreator/templates/wizards/ubuntu/scope/po/: CMakeLists.txt  POTFILES.in
share/qtcreator/templates/wizards/ubuntu/scope/src/: CMakeLists.txt  client.cpp  client.h  displayName-preview.cpp  displayName-preview.h  displayName-query.cpp  displayName-query.h  displayName-scope.cpp  displayName-scope.h  localization.h  preview.cpp  preview.h  query.cpp  query.h  scope-settings.ini.in  scope.cpp  scope.h
share/qtcreator/templates/wizards/ubuntu/scope/src/api/: client.cpp  client.h
share/qtcreator/templates/wizards/ubuntu/scope/src/data/: displayName-settings.ini.in  displayName.ini.in
share/qtcreator/templates/wizards/ubuntu/scope/src/scope/: preview.cpp  query.cpp  scope.cpp
share/qtcreator/templates/wizards/ubuntu/scope/tests/: CMakeLists.txt
share/qtcreator/templates/wizards/ubuntu/scope/tests/server/: server.py
share/qtcreator/templates/wizards/ubuntu/scope/tests/unit/: CMakeLists.txt  test-scope.py
share/qtcreator/templates/wizards/ubuntu/scope/tests/unit/scope/: test-scope.cpp  test-scope.py
src/: plugin.pri
src/cordovaubuntuprojectmanager/: CordovaUbuntuProject.mimetypes.xml  CordovaUbuntuProjectManager.pluginspec.in  common.h  constants.h  cordovaubuntuproject.qrc  cordovaubuntuprojectmanager.pro  cordovaubuntuprojectmanager_dependencies.pri  cproject.cpp  cproject.h  cprojectfile.cpp  cprojectfile.h  cprojectmanager.h  cprojectnode.cpp  cprojectnode.h  crunconfiguration.cpp  crunconfiguration.h  cruncontrol.cpp  cruncontrol.h  global.h  plugin.cpp  plugin.h
src/ubuntu/: Ubuntu.pluginspec.in  UbuntuProject.mimetypes.xml  abstractremoterunsupport.cpp  click-framework.json  (+221 more)
tests/: autopilot-lookup.py  com.ubuntu.pkexec.ubuntu-sdk-autopilot.policy  shared.pri  tests.pro
(+405 files in other folders)
